--- a/style.css
+++ b/style.css
@@ -5,16 +5,24 @@
   box-sizing: border-box;
 }
 :root {
-  --primary-color: hsl(170, 100%, 26%);
+  --hue: 170;
+  --primary-color: hsl(var(--hue), 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
 
   --brand-beige: hsl(39, 100%, 97%);
-  --brand-light: hsl(148, 23%, 89%);
+  --brand-light: hsl(calc(var(--hue) -22), 23%, 89%);
   --bg-light: hsl(180, 14%, 97%);
+  --brand-dark: hsl(var(--hue), 100%, 14%);
 
   --nav-height: 7.2rem;
   font-size: 62.5%; /* 1 rem = 10 px */
+}
+
+/** CUSTOM COLORS **/
+
+#services .card circle {
+  fill: var(--brand-light);
 }
 
 html {
@@ -153,27 +161,6 @@ nav button {
   margin-bottom: 3.2rem;
 }
 
-#home button {
-  background: var(--primary-color);
-  border: none;
-  border-radius: 4rem;
-  margin-bottom: 6rem;
-  height: 6.2rem;
-  width: 26.3rem;
-  color: white;
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  font-weight: 700;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.6rem;
-
-  margin-left: auto;
-  margin-right: auto;
-}
-
 #home img {
   width: 26.4rem;
   display: block;
@@ -286,6 +273,13 @@ body.menu-expanded .menu {
   margin-bottom: 8rem;
 }
 
+.menu .button:hover {
+  background: var(--primary-color);
+  color: white;
+
+  filter: brightness(1.3);
+}
+
 .social-links {
   display: flex;
   align-items: center;
@@ -360,10 +354,99 @@ body.menu-expanded button path {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
+  margin-bottom: 3.2rem;
 }
 
 #contact ul li {
   display: flex;
   align-items: center;
   gap: 0.8rem;
+}
+
+/** BUTTON */
+
+.button {
+  background: var(--primary-color);
+  border: none;
+  border-radius: 4rem;
+  margin-bottom: 6rem;
+
+  padding: 1.6rem 3.2rem;
+  width: fit-content;
+
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+
+  text-decoration: none;
+  transition: background 200ms;
+}
+
+#home .button {
+  margin-inline: auto;
+}
+
+.button:hover {
+  background: var(--brand-dark);
+}
+
+/** FOOTER **/
+
+#footer {
+  background: var(--primary-color);
+  text-align: left;
+  color: white;
+  margin-top: 6rem;
+  padding-block: 6rem;
+}
+
+#footer .logo {
+  display: inline-block;
+  margin-bottom: 2.4rem;
+}
+
+#footer .logo svg {
+  width: 23.6rem;
+  height: 3.1rem;
+}
+
+#footer .logo path {
+  fill: white;
+}
+
+#footer p {
+  color: var(--brand-beige);
+  line-height: 2;
+  margin-bottom: 3.2rem;
+}
+
+#footer .social-links {
+  justify-content: flex-start;
+}
+
+/** BACK TO TOP **/
+
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+
+  transform: translateY(0);
 }
