--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
   box-sizing: border-box;
 }
 :root {
-  --hue: 170;
+  --hue: 290;
   --primary-color: hsl(var(--hue), 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
 
   --brand-beige: hsl(39, 100%, 97%);
-  --brand-light: hsl(calc(var(--hue) -22), 23%, 89%);
+  --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
   --bg-light: hsl(180, 14%, 97%);
   --brand-dark: hsl(var(--hue), 100%, 14%);
 
@@ -24,6 +24,26 @@
 #services .card circle {
   fill: var(--brand-light);
 }
+
+#navigation .logo path[fill*='#00856F'],
+#backToTopButton circle {
+  fill: var(--primary-color);
+}
+
+body.menu-expanded #navigation .logo path,
+#navigation.scroll .logo path {
+  fill: white;
+}
+
+button.open-menu path[stroke*='#00856F'],
+#contact li path {
+  stroke: var(--primary-color);
+}
+
+#navigation.scroll button.open-menu path[stroke*='#00856F'] {
+  stroke: white;
+}
+/** HTML **/
 
 html {
   scroll-behavior: smooth;
@@ -117,14 +137,6 @@ nav .wrapper {
 
 nav.scroll {
   background: var(--primary-color);
-}
-
-nav.scroll .logo path {
-  fill: white;
-}
-
-nav.scroll button path {
-  stroke: white;
 }
 
 nav button {
