--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 
   --brand-beige: hsl(39, 100%, 97%);
   --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
-  --bg-light: hsl(180, 14%, 97%);
+  --brand-light2: hsl(calc(var(--hue) + 10), 14%, 97%);
+  --bg-light: hsl(calc(var(--hue) + 10), 14%, 97%);
   --brand-dark: hsl(var(--hue), 100%, 14%);
 
   --nav-height: 7.2rem;
@@ -153,6 +154,7 @@ nav button {
 /** HOME **/
 
 #home {
+  padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
@@ -160,7 +162,7 @@ nav button {
   content: '';
 
   width: 100%;
-  height: calc(108rem + var(--nav-height));
+  height: calc(76% + var(--nav-height));
 
   display: block;
   top: 0;
@@ -475,8 +477,22 @@ body.menu-expanded button path {
 
 @media (min-width: 1024px) {
   /** Global **/
+  body {
+    overflow: auto;
+  }
+
   .wrapper {
     width: min(112rem, 100%);
+    display: grid;
+  }
+
+  section {
+    padding-block: 16rem;
+  }
+
+  section h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
   }
 
   /** Reset **/
@@ -493,6 +509,7 @@ body.menu-expanded button path {
     transform: initial;
     color: initial;
     background-color: initial;
+    filter: initial;
   }
 
   nav#navigation .close-menu,
@@ -533,8 +550,14 @@ body.menu-expanded button path {
     text-transform: uppercase;
   }
 
+  nav#navigation .menu a.button:hover {
+    background-color: var(--primary-color);
+    border: none;
+    color: white;
+  }
+
   nav#navigation.scroll .menu ul li a {
-    color: var(--brand-light);
+    color: var(--brand-light2);
     opacity: 0.6;
   }
 
@@ -547,6 +570,7 @@ body.menu-expanded button path {
     transition: opacity 0.4s;
   }
 
+  nav#navigation .menu li a.active,
   nav#navigation .menu li a:hover {
     opacity: 1;
     font-weight: 700;
@@ -571,12 +595,85 @@ body.menu-expanded button path {
     background-color: white;
   }
 
-  nav#navigation.scroll .menu li a:hover:after {
+  nav#navigation.scroll .menu li a.active,
+  nav#navigation.scroll .menu li a:hover {
     opacity: 1;
   }
 
+  nav#navigation .menu li a.active:after,
   nav#navigation .menu li a:hover:after {
     padding-inline: 0.8rem;
     width: 100%;
+  }
+
+  nav#navigation.scroll .menu a.button.active,
+  nav#navigation.scroll .menu a.button:hover {
+    background-color: var(--primary-color);
+    filter: brightness(1.3);
+    border: none;
+  }
+
+  /** HOME **/
+  #home::before {
+    height: calc(96% - (var(--nav-height)));
+  }
+
+  #home {
+    padding-top: var(--nav-height);
+  }
+
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas:
+      'A B'
+      'C C';
+  }
+
+  #home .col-a {
+    grid-area: A;
+    text-align: left;
+    align-self: center;
+  }
+
+  #home .col-b {
+    grid-area: B;
+  }
+
+  #home h1 {
+    font-size: 5.2rem;
+  }
+
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home .stats {
+    grid-area: C;
+
+    flex-direction: row;
+    padding: 6rem;
+    gap: 0;
+  }
+
+  #home .stats .stat + .stat {
+    border-left: 1px solid var(--primary-color);
+  }
+
+  #home .stats .stat {
+    flex: 1;
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home img {
+    width: 42rem;
+  }
+
+  /** SERVICES **/
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
   }
 }
